--- a/style.css
+++ b/style.css
@@ -80,7 +80,14 @@
     background-color: var(--hover-bg-color);
     border-radius: 50px;
   }
-  
+
+
+  #dots {
+    padding-left: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   
   .center-content {
     flex: 2;
@@ -93,6 +100,11 @@
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid var(--border-color);
+    position: sticky;
+    top: 0;
+    background-color:--primary-bg-color;
+    z-index: 1000;
+    backdrop-filter: blur(10px)
   }
   
   .top-options .top-option-btn {
